# CppGame

./: .gitmodules  CMakeLists.txt  README.md
include/: engine.hpp  log.hpp
include/core/: window.hpp
include/graphics/: helpers.hpp  mesh.hpp  rendercommands.hpp  shader.hpp
include/manager/: logManager.hpp  renderManager.hpp
src/: CMakeLists.txt  engine.cpp  main.cpp
src/core/: window.cpp
src/graphics/: mesh.cpp  rendercommands.cpp  shader.cpp
src/manager/: logManager.cpp  renderManager.cpp
